--- a/jupyter/Sound tests.ipynb
+++ b/jupyter/Sound tests.ipynb
@@ -173,11 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "hawaiian-myrtle",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PyOctaveBand import PyOctaveBand \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -241,9 +244,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd0f641ec73ad67d23dfa083aab8a842a58c3f6a229537b77e9c57604dbf69394b9",
+   "display_name": "Python 3.8.8 64-bit ('tfg': conda)"
   },
   "language_info": {
    "codemirror_mode": {
