added load position from disk

--- a/research/Sound tests.ipynb
+++ b/research/Sound tests.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "### Instrucciones\n",
     "  - Primero hay que hacer \"trim\" a la data (video y audio)\n",
-    "  - Interpolar => interpolate_nan\n",
+    "  - Interpolar => interpolate_coords\n",
     "  - y luego extraer los tramos"
    ],
    "cell_type": "markdown",
@@ -161,10 +161,10 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
-    "from .package.services.path import interpolate_nan\n",
+    "from .package.services.path import interpolate_coords\n",
     "\n",
-    "x_data = interpolate_nan(x_data)\n",
-    "y_data = interpolate_nan(y_data)\n"
+    "x_data = interpolate_coords(x_data)\n",
+    "y_data = interpolate_coords(y_data)\n"
    ]
   },
   {
