modification in dsp

--- a/research/Sound tests.ipynb
+++ b/research/Sound tests.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "palestinian-roberts",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \r\n",
-    "import numpy as np\r\n",
+    "import os \n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -323,10 +323,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "19\n20\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "win_size = 2**13\n",
+    "overlap = 0.2\n",
+    "len_audio = 131540\n",
+    "\n",
+    "expected_num_of_win = math.ceil(len_audio/win_size*(1+overlap))\n",
+    "\n",
+    "i = 0\n",
+    "num_of_win = 0\n",
+    "\n",
+    "while i+win_size < len_audio:\n",
+    "    num_of_win += 1\n",
+    "    i += math.floor(win_size-win_size*overlap)\n",
+    "\n",
+    "print(num_of_win)\n",
+    "print(expected_num_of_win)"
+   ]
   }
  ],
  "metadata": {
