added spectrum widget

--- a/tests/test_dsp.ipynb
+++ b/tests/test_dsp.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python395jvsc74a57bd053df54316d98f24dbfc7c734d5f4d452447506090afff764ce199c84a0cecfa1",
+   "name": "python395jvsc74a57bd0093c434852d9ec79f61007fe4b05c383f65155be3b7fd5e49252f3e6bc66834c",
    "display_name": "Python 3.9.5 64-bit (conda)"
   },
   "metadata": {
@@ -222,13 +222,15 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "\n",
     "xtick = [int(f) for f in freq]\n",
     "xticklabel = [str(round(f)) if f<1000 else str(round(f/1000, 1))+'k' for f in freq]\n",
     "\n",
     "# Show octave spectrum\n",
     "fig, ax = plt.subplots()\n",
-    "ax.bar(freq, spl_wn)\n",
-    "ax.bar(freq, spl_pn)\n",
+    "# ax.bar(freq, spl_wn)\n",
+    "# ax.bar(freq, spl_pn)\n",
     "ax.grid(which='major')\n",
     "ax.grid(which='minor', linestyle=':')\n",
     "ax.set_xlabel(r'Frequency [Hz]')\n",
