started adding documentation

--- a/research/Sound tests.ipynb
+++ b/research/Sound tests.ipynb
@@ -267,11 +267,11 @@
     "    smallest_bandwidth = freq_u[0]-freq_d[0]\n",
     "    return smallest_bandwidth\n",
     "\n",
-    "def getTimeOfRecording(lowest_freq, e = 0.1, frac = 3, fs = 48000):\n",
+    "def get_time_of_recording(lowest_freq, e = 0.1, frac = 3, fs = 48000):\n",
     "    sb = getSmallestBandwidth(lowest_freq, frac, fs)\n",
     "    return getTime(sb, e)\n",
     "\n",
-    "print(f'For 20Hz => {round(getTimeOfRecording(20), 1)}s')\n"
+    "print(f'For 20Hz => {round(get_time_of_recording(20), 1)}s')\n"
    ]
   },
   {
